--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,9 @@ jobs:
       matrix:
         python-version: ["3.9"]
         ml-deps:
-          - "torch==2.1.0+cpu torchvision==0.16.0+cpu torchdata==0.7.0 tensorflow-cpu==2.15.0 'numpy>=1.25'"
-          - "torch==2.2.0+cpu torchvision==0.17.0+cpu torchdata==0.8.0 tensorflow-cpu==2.15.0 'numpy>=1.25'"
-          - "torch==2.3.1+cpu torchvision==0.18.1+cpu torchdata==0.8.0 'tensorflow-cpu<2.16.0' 'numpy<2'"
+          - "torch==2.1.2+cpu torchvision==0.16.2+cpu torchdata==0.7.1 tensorflow-cpu==2.15.0 "
+#          - "torch==2.2.2+cpu torchvision==0.17.2+cpu torchdata==0.8.0 tensorflow-cpu==2.15.0 " 'torch.utils._import_utils'
+          - "torch==2.3.1+cpu torchvision==0.18.1+cpu torchdata==0.8.0 'tensorflow-cpu<2.16.0'"
     env:
       run_coverage: ${{ github.ref == 'refs/heads/master' }}
 
