--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Build package
-      run: pip install wheel && python setup.py sdist bdist_wheel && ls -l dist
+      run: pip install wheel setuptools && python setup.py sdist bdist_wheel && ls -l dist
     - name: Publish package to TestPyPI
       uses: pypa/gh-action-pypi-publish@master
       continue-on-error: true
